--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,11 @@
 body, html {
     margin-top: 30px;
     height: 100%;
-  
+   
     
     
   }
   
-    a:link {
-      text-decoration: none;
-    }
-    
-    #container div {
-      align-items: center;
-      margin: 20px;
-      width: 95%;
-      align-content: center;
-    }
-    
-      header {
-              
-        text-align: center;
-        color:white;
-        font-size: 14px;
-         margin-top: auto;
-        }
-      
-   
     section {
      
      
@@ -36,14 +16,14 @@ body, html {
       top: 0;
       left: 0;
       animation: rain .4s linear infinite;
-      background-image: url('/img/e18d9db98700dfb31de90ed258597a0d.jpg');
+      background-image: url(/img/e18d9db98700dfb31de90ed258597a0d.jpg);
       
       
       opacity: 0;
   }
   @keyframes rain {
       0% {
-        background-image: url('/img/e18d9db98700dfb31de90ed258597a0d.jpg');
+        background-image: url(/img/e18d9db98700dfb31de90ed258597a0d.jpg);
         
           opacity: 1;
       }
@@ -102,7 +82,7 @@ body, html {
   #question {
     margin: 20px;
     padding: 10px;
-    width: 300px;
+    width: 350px;
     font-size:18px;
   }
   #info {
