--- a/css/style.css
+++ b/css/style.css
@@ -16,14 +16,14 @@ body, html {
       top: 0;
       left: 0;
       animation: rain .4s linear infinite;
-      background-image: url(/img/e18d9db98700dfb31de90ed258597a0d.jpg);
+      background-image: url('/img/e18d9db98700dfb31de90ed258597a0d.jpg');
       
       
       opacity: 0;
   }
   @keyframes rain {
       0% {
-        background-image: url(/img/e18d9db98700dfb31de90ed258597a0d.jpg);
+        background-image: url('/img/e18d9db98700dfb31de90ed258597a0d.jpg');
         
           opacity: 1;
       }
