--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,4 @@
-      body {
-       
-          background-color: black;
-        }
-      
-      section {
-     
+      section  {
       width: 100%;
       height: 100vh;
       position: relative;
@@ -12,10 +6,8 @@
       top: 0;
       left: 0;
       animation: rain 0.4s linear infinite;
-     
-      
-      
-          opacity: 0;
+      opacity: 0;
+      text-align: center;
       }
       @keyframes rain {
           0% {
@@ -71,7 +63,7 @@
         font-family: arial;
         letter-spacing: 2px;
         font-size:14px;
-        font-family: "Sofia", sans-serif;
+       
       }
       #question {
         margin: 20px;
