--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,23 @@
-      section  {
-      width: 100%;
-      height: 100vh;
-      position: relative;
-      position: absolute;
-      top: 0;
-      left: 0;
-      animation: rain 0.4s linear infinite;
-      opacity: 0;
-      text-align: center;
+     h4 {
+      color:white;
+     }
+     section {
+
+          text-align: center;
+           background-color: black;
+          width: 100%;
+          height: 100vh;
+          position: relative;
+          position: absolute;
+          top: 0;
+          left: 0;
+          animation: rain .70s linear infinite;
+          opacity: 0;
       }
       @keyframes rain {
           0% {
-            background-image: url('/img/e18d9db98700dfb31de90ed258597a0d.jpg');
-            
+            background-image: url(/img/e18d9db98700dfb31de90ed258597a0d.jpg);
+              background-position: 0 0;
               opacity: 1;
           }
           100% {
@@ -20,7 +25,28 @@
               opacity: 1;
           }
       }
-  
+  h1 { font-weight: 100; font-size: 2.5em;}
+      #content {
+       width: 600px;
+       margin: 0 auto;
+       margin-top: 50px;
+       border: none;
+       text-align: center;
+       font-family: 'Helvetica Neue', arial;
+       font-weight: 100;
+     }
+      div.eight-ball {
+        background-color: black;
+        border: 1px solid white;
+        border-radius: 50%;
+        width: 300px;
+        height: 280px;
+        margin: 0 auto;
+        padding-bottom: 10px;
+        margin-bottom: 30px;
+        margin-top: 20px;
+      }
+           
       h1 { font-weight: 100; font-size: 2.5em;}
       #text {
       width: 600px;
