--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-     p, h4 {
+      p, h4 {
       color:white;
+      margin-left:-10%;
      }
      section {
 
-          text-align: center;
-           background-color: black;
+        
+          background-color: black;
           width: 100%;
           height: 100vh;
           position: relative;
@@ -35,22 +36,12 @@
        font-family: 'Helvetica Neue', arial;
        font-weight: 100;
      }
-      div.eight-ball {
-        background-color: black;
-        border: 1px solid white;
-        border-radius: 50%;
-        width: 300px;
-        height: 280px;
-        margin: 0 auto;
-        padding-bottom: 10px;
-        margin-bottom: 30px;
-        margin-top: 20px;
-      }
+      
            
       h1 { font-weight: 100; font-size: 2.5em;}
       #text {
       width: 600px;
-      margin: 0 auto;
+      margin-left: -10px;
       margin-top: 50px;
       border: none;
       text-align: center;
@@ -63,7 +54,8 @@
         border-radius: 50%;
         width: 300px;
         height: 300px;
-        margin: 0 auto;
+        margin-left: 20%;
+     
         padding-bottom: 10px;
         margin-bottom: 40px;
         margin-top: -5px;
@@ -92,9 +84,10 @@
        
       }
       #question {
-        margin: 20px;
+
+        margin-left:-10%;
         padding: 10px;
-        width: 350px;
+        width: 300px;
         font-size:18px;
       }
       #info {
